# paraC

./: .gitignore  AGENTS.md  CLAUDE.md  CONFIG.md  GEMINI.md  README.md  README.rst  app.py  environment.yml  parC.env  pyproject.toml  refactor_notes.md  requirements.txt  todo.md
.devcontainer/: devcontainer.json
data/: README.md  adverbs.csv  beam_search_profile.csv  fuzzy_nouns.csv  gold_verbs.csv  inflected_verb_forms.csv  nouns.csv  nouns.xlsx  nouns_excel_raw.csv  uninflected_words.csv  verb_paradigms.xlsx  verb_roots_final.csv  verb_roots_new.csv
deprecated/: cli.py  decorators.py  fst_helpers.py  parser.py  sentences.py
doc/: grammar_modules.rst  overview.rst
frontend/: api.js  hub.js  index.html  inflect.js  parse.js  style.css  tests.js
notebooks/: beam_search.ipynb  debug_k2.py  edit_ngrams.ipynb  k2_sandbox.ipynb  parsing_dataset.ipynb  pdt.ipynb  pynini.ipynb  rewrite_eos_bos.ipynb
notes/: dirty_state_design.md  homophones.md  lexical_feature_selection.md  page_refactor_plan.md
plans/: broken_buttons.md  dirty_state_design.md  eager_compilation.md  feature_api.md  fragmenting.md  mission_hub.md  vscode-editor-poc.md
schemas/: ContingentFeatureMarkers.json  FeatureCombinations.json  FeatureDefinitions.json  FeatureMarkers.json  Inventory.json  MorphemeSequence.json  MorphemeSet.json  Paradigm.json  Patterns.json  Rules.json
scripts/: build_person_marking_exs.py  dataset_builder.py  lexicon_builder.py  noun_lexicon_builder.py  profile_beam_search.py  rewrite_asr_dataset.py
src/: __init__.py  api.py  app.py  beam_search.py  beam_search_jit.py  beam_search_jit_stale.py  cache.py  cache_decorators.py  cli.py  config_utils.py  constants.py  decorators.py  feature_registry.py  features.py  form_constructors.py  forms.py  fst.py  fst_helpers.py  fst_registry.py  fst_utils.py  glossing.py  ingest_elan.py  ingest_lexicon.py  launcher.py  lexicon.py  marker_registry.py  models.py  noun_forms.py  paradigm_registry.py  parser.py  phoneme_inventory.py  phonology.py  process_text.py  registry_utils.py  search.py  sentences.py  validation.py  verb_forms.py
static/: base.html  config.html  corpus.html  home.html  inflector.html  parser.html
templates/: _inflect_verb.html  _inflect_verb_result.html  _parse_verb.html  _parse_verb_result.html  _test_inflect_verb.html  _verb_feature_dropdowns.html  _verb_root_dropdown.html  analyze.html  index.html  layout.html  lexicon.html  paradigms.html  sentences.html
tests/: cache_invalidation_test.py  feature_regisry_test.py  feature_registry_test.py  forms_test.py  fst_registry_test.py  fst_test.py  glossing_test.py  grammar_registry_test.py  inventory_validation_test.py  main_parser_test.py  marker_registry_test.py  morpheme_sequence_test.py  (+8 more)
(+366 files in other folders)
