[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parC"
version = "0.1.0"
description = "paradigm Compiler. Toolkit for morphological transduction based on paradigms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas",
  "tqdm",
  "openpyxl",
  "pynini==2.1.6",
  "graphviz",
  "pydot",
  "pyyaml",
  "loguru",
  "pygments>=2.19.2",
  "pytest>=8.3.5",
  "jsonschema>=4.23.0",
  "dotenv>=0.9.9",
  "watchdog>=4.0.2",
  "camel-converter>=3.1.2",
  "fastapi>=0.124.4",
  "uvicorn>=0.33.0",
]

[project.optional-dependencies]
dev = ["pytest", "ipykernel"]

[project.scripts]
parC:"src.api:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.yaml", "*.yml", "*.json", "*.txt", "*.xlsx"]
